feat: add preflight drive item name check
